fix: hide vertical scrollbar when responsive

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,7 @@ body > div:first-child,
 div#__next,
 div#__next > div {
   height: 100%;
+  overflow: auto;
 }
 
 ::-webkit-scrollbar {
